hphp/hack/test/typecheck/trait_interface_constructor_promotion.php.exp
File "trait_interface_constructor_promotion.php", line 4, characters 19-29:
Constructor parameter promotion not allowed on traits or interfaces (Naming[2093])
